# value-investing-tool

./: .env.example  .gitignore  README.md  cloud_pages_monitor.py  pyproject.toml  requirements.txt
apps/: streamlit_app.py
config/: settings.yaml
data/: deploy_trigger.txt  fundamentals_snapshot.part000  fundamentals_snapshot.part001  fundamentals_snapshot.part002  fundamentals_snapshot.part003  fundamentals_snapshot.part004  fundamentals_snapshot.part005  fundamentals_snapshot.part006  fundamentals_snapshot.part007  fundamentals_snapshot.part008  fundamentals_snapshot.part009  fundamentals_snapshot.part010  fundamentals_snapshot.part011  fundamentals_snapshot.part012  fundamentals_snapshot.part013  fundamentals_snapshot.part014  fundamentals_snapshot.part015  fundamentals_snapshot.part016  fundamentals_snapshot.part017  fundamentals_snapshot.part018  fundamentals_snapshot.part019  fundamentals_snapshot.part020  fundamentals_snapshot.part021  fundamentals_snapshot.part022  fundamentals_snapshot.part023  fundamentals_snapshot.part024  fundamentals_snapshot.part025  fundamentals_snapshot.part026  fundamentals_snapshot.part027  fundamentals_snapshot.part028  fundamentals_snapshot.part029  fundamentals_snapshot.part030  fundamentals_snapshot.part031  fundamentals_snapshot.part032  fundamentals_snapshot.part033  fundamentals_snapshot.part034  fundamentals_snapshot.part035  fundamentals_snapshot.part036  fundamentals_snapshot.part037  fundamentals_snapshot.part038  (+43 more)
deploy/: github-pages-status.md
docs/: architecture.md  data_dictionary.md  methodology.md
src/: cli.py  (+1 more)
(+53 files in other folders)
